DotRenderer now uses ProcessBuilder to start dot processes, and now also properly escapes command arguments.